--- a/larbin-cn.conf
+++ b/larbin-cn.conf
@@ -17,7 +17,7 @@ UserAgent larbin_2.6.5
 # 2 - 镜像保存模式（将页面进行镜像保存）
 # 3 - 状态监测模式（通过webserver输出状态信息）
 # ? - 什么都不做（用于测试larbin）
-outputMode 0
+outputMode 3
 
 # webserver所使用的端口
 # 如果不设置或设为0，则将不启动webserver
@@ -98,6 +98,7 @@ getCGI
 
 # 第一个抽取的网址（你可以设置很多条）
 startUrl http://www.csdn.net/
+startUrl http://www.baidu.com/
 
 # 使用punycode来解析unicode域名（中文域名支持）
 #punycode
